[project]
name = "fiberartdocumentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown-callouts>=0.4.0",
    "markdown-captions>=2.1.2",
    "mdx-wikilink-plus>=1.4.1",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.7.0",
]
